End of Section 7 User Management

--- a/src/index.css
+++ b/src/index.css
@@ -108,13 +108,14 @@ body {
 
 /* dropzone styles */
 .dropzone {
-  border: dashed 3px #eee;
+  border: dashed 1.5px #eee;
   border-radius: 5px;
   padding-top: 30px;
+  padding-bottom: 5px;
   text-align: center;
   /* min-height: 236px; */
 }
 
 .dropzone--isActive {
-  border: dashed 3px green;
+  border: dashed 1.5px green;
 }
